@@ -1,6 +1,15 @@
+MJ 20/04/08
+- Refactoring of EDSimulator to support the application of any event queue
+  implementation. The even queue can now be configured to be any extrenal class
+  implementing peersim.edsim.PriorityQ. Tests show there is no noticeable
+  penalty for performance.
+- Fixing various problems with handling integer overflow in time management in
+  EDSimulator, Heap, and Scheduler.
+
 MJ 18/04/08
-- Changed truncation to rounding (as stated in the class docs) for DynamicNetwork.
-  This fixes issues with small network sizes (or small "add" percentages).
+- Changed truncation to rounding (as stated in the class docs) for
+  DynamicNetwork. This fixes issues with small network sizes (or small "add"
+  percentages).
 - Fixed bug in RandNI: it assumed it is called after insertion, while the
   specification says it is called before insertion. This caused misbehavior for
   networks of size 1, and, more annoyingly, resulted in the node with index 0
